# flappy-bird-sfml-cpp

./: CMakeLists.txt  main.cpp
